@@ -6,12 +6,11 @@ import com.triptyche.backend.domain.media.dto.MediaFileResponseDTO;
 import com.triptyche.backend.domain.media.dto.MediaFilesByDate;
 import com.triptyche.backend.domain.media.dto.MediaFilesByDateResponseDTO;
 import com.triptyche.backend.domain.media.dto.PinPointMediaFilesResponseDTO;
-import com.triptyche.backend.domain.media.model.MediaFile;
 import com.triptyche.backend.domain.media.repository.MediaFileRepository;
 import com.triptyche.backend.domain.pinpoint.model.PinPoint;
 import com.triptyche.backend.domain.pinpoint.model.PinPointResponseDTO;
 import com.triptyche.backend.domain.pinpoint.repository.PinPointRepository;
-import com.triptyche.backend.domain.share.model.Share;
+import com.triptyche.backend.domain.share.dto.ShareSummary;
 import com.triptyche.backend.domain.share.repository.ShareRepository;
 import com.triptyche.backend.domain.trip.dto.MapViewResponseDTO;
 import com.triptyche.backend.domain.trip.dto.PinPointImageGalleryResponseDTO;
@@ -19,11 +18,9 @@ import com.triptyche.backend.domain.trip.dto.TripResponseDTO;
 import com.triptyche.backend.domain.trip.dto.TripsResponseDTO;
 import com.triptyche.backend.domain.trip.dto.UpdateTripInfoResponseDTO;
 import com.triptyche.backend.domain.trip.model.Trip;
-import com.triptyche.backend.domain.trip.model.TripStatus;
 import com.triptyche.backend.domain.trip.repository.TripRepository;
 import com.triptyche.backend.domain.trip.validator.TripAccessValidator;
 import com.triptyche.backend.domain.user.model.User;
-import com.triptyche.backend.domain.user.repository.UserRepository;
 import com.triptyche.backend.global.common.ResultCode;
 import com.triptyche.backend.global.exception.CustomException;
 import com.triptyche.backend.global.util.DateFormatter;
@@ -32,6 +29,7 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -41,44 +39,47 @@ import org.springframework.transaction.annotation.Transactional;
 @Service
 @RequiredArgsConstructor
 @Slf4j
+@Transactional(readOnly = true)
 public class TripQueryService {
 
   private final TripRepository tripRepository;
   private final PinPointRepository pinPointRepository;
-  private final UserRepository userRepository;
   private final MediaFileRepository mediaFileRepository;
   private final ShareRepository shareRepository;
   private final TripAccessValidator tripAccessValidator;
   private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+  private static final LocalDateTime DEFAULT_INVALID_DATE = LocalDateTime.of(1980, 1, 1, 0, 0, 0);
 
 
   public TripsResponseDTO getTripsByUserEmail(String userEmail) {
     log.info("userEmail: {}", userEmail);
-    User user = userRepository.findByUserEmail(userEmail)
-            .orElseThrow(() -> {
-              log.error("해당 유저를 찾을 수 없습니다: {}", userEmail);
-              return new CustomException(ResultCode.USER_NOT_FOUND);
-            });
-    List<TripResponseDTO> tripDTOs = tripRepository.findAllAccessibleTrips(
-                    user.getUserId())
-            .stream()
-            .map(trip -> {
-              boolean confirmed = trip.getStatus() == TripStatus.CONFIRMED;
-              String ownerNickname = trip.getUser().getUserNickName();
+    User user = tripAccessValidator.getUserByEmail(userEmail);
 
-              List<String> sharedUserNicknames = shareRepository.findAllByTrip(trip)
-                      .stream()
-                      .filter(s -> s.getShareStatus() == com.triptyche.backend.domain.share.model.ShareStatus.APPROVED)
-                      .map(Share::getRecipientId)
-                      .map(recipientId -> userRepository.findById(recipientId)
-                              .map(User::getUserNickName)
-                              .orElse(null))
-                      .filter(java.util.Objects::nonNull)
+    List<Trip> trips = tripRepository.findAllAccessibleTripsWithOwner(user.getUserId());
+
+    if (trips.isEmpty()) {
+      return new TripsResponseDTO(List.of());
+    }
+
+    List<Long> tripIds = trips.stream().map(Trip::getTripId).toList();
+
+    List<ShareSummary> allShares = shareRepository.findApprovedShareSummariesByTripIds(tripIds);
+
+    Map<Long, List<ShareSummary>> shareMap = allShares.stream()
+            .collect(Collectors.groupingBy(ShareSummary::tripId));
+
+    List<TripResponseDTO> tripDTOs = trips.stream()
+            .map(trip -> {
+              List<ShareSummary> shares = shareMap.getOrDefault(trip.getTripId(), List.of());
+
+              List<String> sharedUserNicknames = shares.stream()
+                      .map(ShareSummary::recipientNickname)
                       .toList();
 
-              Long shareId = shareRepository
-                      .findByTripAndRecipientId(trip, user.getUserId())
-                      .map(Share::getShareId)
+              Long shareId = shares.stream()
+                      .filter(s -> s.recipientId().equals(user.getUserId()))
+                      .map(ShareSummary::shareId)
+                      .findFirst()
                       .orElse(null);
 
               return new TripResponseDTO(
@@ -88,26 +89,23 @@ public class TripQueryService {
                       formatLocalDateToString(trip.getStartDate()),
                       formatLocalDateToString(trip.getEndDate()),
                       trip.getHashtagsAsList(),
-                      ownerNickname,
+                      trip.getUser().getUserNickName(),
                       sharedUserNicknames,
                       shareId,
-                      confirmed
+                      trip.isConfirmed()
               );
             })
-            .collect(Collectors.toList());
+            .toList();
+
     return new TripsResponseDTO(tripDTOs);
   }
 
   public UpdateTripInfoResponseDTO getTripById(String userEmail, Long tripId) {
     Trip trip = tripAccessValidator.validateAccessibleTrip(tripId, userEmail);
 
-    List<MediaFile> mediaFiles = mediaFileRepository.findByTripTripId(tripId);
-
-    List<String> mediaFilesDates = mediaFiles.stream()
-            .map(MediaFile::getRecordDate)
-            .map(LocalDateTime::toLocalDate)
-            .distinct()
-            .sorted()
+    List<String> mediaFilesDates = mediaFileRepository
+            .findDistinctRecordDatesByTripId(tripId, DEFAULT_INVALID_DATE)
+            .stream()
             .map(DateFormatter::formatLocalDateToString)
             .toList();
 
@@ -124,11 +122,10 @@ public class TripQueryService {
 
   public MapViewResponseDTO getTripInfoById(String userEmail, Long tripId) {
     Trip trip = tripAccessValidator.validateAccessibleTrip(tripId, userEmail);
-    LocalDateTime defaultDate = LocalDateTime.of(1980, 1, 1, 0, 0, 0);
 
     List<PinPointResponseDTO> pinPoints = pinPointRepository.findEarliestSingleMediaFileForEachPinPointByTripId(tripId,
-            defaultDate);
-    List<MediaFileResponseDTO> mediaFiles = pinPointRepository.findMediaFilesByTripId(tripId, defaultDate);
+            DEFAULT_INVALID_DATE);
+    List<MediaFileResponseDTO> mediaFiles = pinPointRepository.findMediaFilesByTripId(tripId, DEFAULT_INVALID_DATE);
 
     return new MapViewResponseDTO(
             trip.getTripTitle(),
@@ -142,22 +139,19 @@ public class TripQueryService {
                             pinPoint.recordDate(),
                             pinPoint.mediaLink()
                     ))
-                    .collect(Collectors.toList()),
+                    .toList(),
             mediaFiles
     );
   }
 
-  @Transactional(readOnly = true)
   public PinPointImageGalleryResponseDTO getPointImages(String userEmail, Long tripId, Long pinPointId) {
     tripAccessValidator.validateAccessibleTrip(tripId, userEmail);
 
     PinPoint pinPoint = pinPointRepository.findById(pinPointId)
             .orElseThrow(() -> new CustomException(ResultCode.PINPOINT_NOT_FOUND));
 
-    LocalDateTime defaultDate = LocalDateTime.of(1980, 1, 1, 0, 0);
-
     List<PinPointMediaFilesResponseDTO> mediaFiles = mediaFileRepository.findByTripTripIdAndPinPointPinPointId(tripId,
-            pinPointId, defaultDate);
+            pinPointId, DEFAULT_INVALID_DATE);
     if (mediaFiles.isEmpty()) {
       throw new CustomException(ResultCode.MEDIA_FILE_NOT_FOUND);
     }
@@ -168,7 +162,6 @@ public class TripQueryService {
     );
   }
 
-  @Transactional(readOnly = true)
   public MediaFilesByDateResponseDTO getImagesByDate(String userEmail, Long tripId, String date) {
     tripAccessValidator.validateAccessibleTrip(tripId, userEmail);
 
@@ -181,10 +174,9 @@ public class TripQueryService {
 
     LocalDateTime startOfDay = parsedDate.atStartOfDay();
     LocalDateTime endOfDay = parsedDate.atTime(23, 59, 59);
-    LocalDateTime defaultDate = LocalDateTime.of(1980, 1, 1, 0, 0);
 
     List<MediaFilesByDate> mediaFiles = mediaFileRepository.findByTripTripIdAndRecordDate(tripId, startOfDay, endOfDay,
-            defaultDate);
+            DEFAULT_INVALID_DATE);
     if (mediaFiles.isEmpty()) {
       throw new CustomException(ResultCode.MEDIA_FILE_NOT_FOUND);
     }
